# 0-rpa

./: .gitignore  Cargo.toml  README.md  justfile
_docs/: design.md  uml.md
apps/desktop/: index.html  package-lock.json  package.json  vite.config.ts
apps/desktop/src/: App.tsx  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/.cargo/: config.toml
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: engine.rs  grpc_client.rs  lib.rs  main.rs
apps/desktop/src-tauri/src/commands/: debug.rs  engine.rs  mod.rs  plugin.rs  settings.rs  task.rs  workflow.rs
apps/desktop/src-tauri/src/storage/: connection.rs  migration.rs  mod.rs
apps/desktop/src-tauri/src/storage/entities/: mod.rs  plugin.rs  settings.rs  task_history.rs  workflow.rs
apps/desktop/src/components/: Layout.tsx  Sidebar.tsx
apps/desktop/src/pages/: Debug.tsx  PluginDetail.tsx  Plugins.tsx  Settings.tsx  Tasks.tsx  WorkflowEditor.tsx  Workflows.tsx
apps/desktop/src/store/: usePluginStore.ts  useSettingsStore.ts  useTaskStore.ts  useWorkflowStore.ts
apps/server/: Cargo.toml
apps/server/src/: config.rs  main.rs
crates/rpa-action/: Cargo.toml
crates/rpa-action/src/: lib.rs  mock.rs  windows.rs
crates/rpa-api/: Cargo.toml
crates/rpa-api/src/: dto.rs  grpc.rs  http.rs  lib.rs
crates/rpa-core/: Cargo.toml
crates/rpa-core/src/: condition.rs  context.rs  element.rs  error.rs  instruction.rs  lib.rs  plugin.rs  spec.rs  target.rs  task.rs  traits.rs  value.rs
crates/rpa-engine/: Cargo.toml
crates/rpa-engine/src/: cancellation.rs  context.rs  events.rs  executor.rs  finder.rs  lib.rs  retry.rs  vm.rs
crates/rpa-js/: Cargo.toml
crates/rpa-js/src/: bridge.rs  error.rs  lib.rs  modules.rs  runtime.rs  sandbox.rs  value.rs
crates/rpa-js/src/modules/: debug_module.rs  fs_module.rs  http_module.rs  ocr_module.rs  rpa_module.rs  window_module.rs
crates/rpa-orchestrator/: Cargo.toml
crates/rpa-orchestrator/src/: concurrency.rs  lib.rs  scheduler.rs  store.rs  task_manager.rs
crates/rpa-perception/: Cargo.toml
crates/rpa-perception/src/: composite.rs  image.rs  lib.rs  mock.rs  uia.rs
crates/rpa-perception/src/capture/: mod.rs
crates/rpa-perception/src/debug/: mod.rs
crates/rpa-perception/src/ocr/: mod.rs
crates/rpa-perception/src/window/: finder.rs  mod.rs
crates/rpa-plugin/: Cargo.toml
crates/rpa-plugin/src/: bundle.rs  lib.rs  lifecycle.rs  loader.rs  manifest.rs  registry.rs  sandbox.rs
crates/rpa-workflow/: Cargo.toml
crates/rpa-workflow/src/: compiler.rs  lib.rs  loader.rs  parser.rs  step.rs  validator.rs
proto/: rpa.proto
scripts/: dev.sh
