[workspace]
members = [
    "crates/rpa-core",
    "crates/rpa-engine",
    "crates/rpa-workflow",
    "crates/rpa-plugin",
    "crates/rpa-js",
    "crates/rpa-perception",
    "crates/rpa-action",
    "crates/rpa-api",
    "crates/rpa-orchestrator",
    "apps/server",
]
resolver = "2"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Async trait
async-trait = "0.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# IDs and time
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

# HTTP
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# gRPC
tonic = "0.12"
prost = "0.13"

# QuickJS
rquickjs = "0.7"

# Windows API (conditional)
windows = { version = "0.58", features = [
    "UI_UIAutomation",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_System_Com",
    "Graphics_Capture",
    "Graphics_Imaging",
    "Media_Ocr",
] }

# Image processing
image = "0.25"

# CLI
clap = { version = "4", features = ["derive"] }

# Config
toml = "0.8"

# Database (optional)
rusqlite = { version = "0.32", features = ["bundled"] }

# Plugin loading
zip = "2"

# Template engine
handlebars = "6"

# JSON Schema validation
jsonschema = "0.26"

# Internal crate references
rpa-core = { path = "crates/rpa-core" }
rpa-engine = { path = "crates/rpa-engine" }
rpa-workflow = { path = "crates/rpa-workflow" }
rpa-plugin = { path = "crates/rpa-plugin" }
rpa-js = { path = "crates/rpa-js" }
rpa-perception = { path = "crates/rpa-perception" }
rpa-action = { path = "crates/rpa-action" }
rpa-api = { path = "crates/rpa-api" }
rpa-orchestrator = { path = "crates/rpa-orchestrator" }

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"