[package]
name = "rpa-server"
version.workspace = true
edition.workspace = true

[dependencies]
rpa-core = { workspace = true }
rpa-engine = { workspace = true }
rpa-workflow = { workspace = true }
rpa-plugin = { workspace = true }
rpa-js = { workspace = true }
rpa-perception = { workspace = true }
rpa-action = { workspace = true }
rpa-api = { workspace = true }
rpa-orchestrator = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }