[package]
name = "rpa-api"
version.workspace = true
edition.workspace = true

[dependencies]
rpa-core = { workspace = true }
rpa-engine = { workspace = true }
rpa-orchestrator = { workspace = true }
rpa-plugin = { workspace = true }
axum = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
reqwest = { version = "0.12", features = ["json"] }