[package]
name = "rpa-engine"
version.workspace = true
edition.workspace = true

[dependencies]
rpa-core = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }