[package]
name = "rpa-js"
version.workspace = true
edition.workspace = true

[dependencies]
rpa-core = { workspace = true }
rquickjs = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }