[package]
name = "rpa-perception"
version.workspace = true
edition.workspace = true

[dependencies]
rpa-core = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
image = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }