[package]
name = "rpa-workflow"
version.workspace = true
edition.workspace = true

[dependencies]
rpa-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
handlebars = { workspace = true }
jsonschema = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }