[package]
name = "rpa-desktop"
version = "0.1.0"
edition = "2021"

[lib]
name = "desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "rpa-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
sea-orm = { version = "0.12", features = ["sqlx-sqlite", "runtime-tokio-native-tls", "macros"] }
sea-orm-migration = { version = "0.12", features = ["sqlx-sqlite", "runtime-tokio-native-tls"] }
zip = "0.6"
dirs = "5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
